<resources>
    <!-- \u0020 Creates a space at the beginning or end of a string -->
    <!-- Name of the application as shown underneath icon -->
    <string name="app_name">Market Aid</string>

    <!-- Titles -->
    <string name="title_activity_edit_product" translatable="false">EditProductActivity</string>
    <string name="title_activity_show_products" translatable="false">ShowProductsActivity</string>
    <string name="title_activity_create_seller" translatable="false">CreateSellerActivity</string>
    <string name="title_activity_seller_main" translatable="false">SellerMainActivity</string>
    <string name="title_activity_seller_add" translatable="false">SellerAddActivity</string>
    <string name="title_activity_seller_create" translatable="false">SellerCreateActivity</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="title_activity_create_account" translatable="false">CreateAccountActivity</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="title_activity_how_to" translatable="false">HowToActivity</string>
    <string name="title_activity_buyer_main" translatable="false">BuyerMainActivity</string>
    <string name="title_activity_buyer_product" translatable="false">BuyerProductActivity</string>
    <string name="title_activity_buyer_filter" translatable="false">BuyerFilterActivity</string>
    <string name="title_activity_comment" translatable="false">CommentActivity</string>

    <string name="title_activity_main_screen">Welcome to the Market!</string>
    <string name="title_activity_seller_login">Please login</string>

    <string name="action_settings">Settings</string>

    <string name="title_section1">Main Overview</string>
    <string name="title_section2">Add Product</string>
    <string name="title_section3">Settings</string>
    <string name="title_section4">Logout</string>

    <string name="noImageTitle">Image</string>
    <string name="Title">Title</string>
    <string name="ProductTitle">Product Title</string>
    <string name="splash_screen">A project group 6 app</string>

    <!--Temporary Strings-->
    <string name="Howtoscreen" translatable="false">De how to screen, Hier komt informatie over bijv waar het menu scherm is, Dus Rechts boven in.</string>
    <string name="AckHowtoscreen">OK, understood.</string>

    <!-- Buttons -->
    <string name="OK">@android:string/ok</string>
    <string name="Cancel">@android:string/cancel</string>

    <string name="Yes">Yes</string>

    <string name="BuyerButton">Buy</string>
    <string name="SellerButton">Sell</string>

    <string name="AddImage">Open camera</string>
    <string name="AddOrEdit">Add or Edit Product</string>
    <string name="Browse">Browse</string>
    <string name="RemoveProduct">Remove Product</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="Present">Present</string>
    <string name="buttonSettingsLogin">Login</string>
    <string name="buttonSetGPS">Set Location</string>
    <string name="noImageContinue">Continue</string>
    <string name="backButton">Back</string>
    <string name="EditImage">Open camera</string>
    <string name="AddProduct">Add Product</string>
    <string name="ShowLocation">Show Location</string>
    <string name="action_example" translatable="false">Example action</string>
    <string name="SetFilter">Set Filter</string>
    <string name="SelectFilter">Select Filter</string>

    <string name="commentPostButton">Post!</string>
    <string name="noConnectionMapsCancel">Continue</string>
    <string name="Settings">Settings</string>
    <string name="createButton">Create Account</string>
    <string name="addToYourProductsAdd">Add to my products</string>

    <!-- Descriptions and hints -->
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="BuyerOverview">Market Products</string>
    <string name="SellerOverview">My Products</string>
    <string name="BuySelltext1"><b>Are you here today to</b></string>
    <string name="BuySelltext2"><b>or to</b></string>

    <string name="ProductDescription">Product Description</string>
    <string name="EnterProductDescription">Enter Product description here</string>
    <string name="AddEditProduct">Add/Edit Product!</string>
    <string name="EnterProductTitle">Enter Product Title here</string>
    <string name="EnterProductCategory">Enter Product Category here</string>
    <string name="Category">Category</string>
    <string name="EditProduct">Edit Product</string>
    <string name="Description">Description</string>
    <string name="createAccountText">No account yet? Click on the button "Register" to create one!</string>
    <string name="emailText">E-mail</string>
    <string name="addToYourProductsPart1">Do you want to add \"</string>
    <string name="addToYourProductsPart2">\" to your products?</string>

    <string name="gotosettings">Go to settings</string>
    <string name="locationsettings">Location settings</string>
    <string name="commentButton">Write Comment</string>
    <string name="commentName">Name:\u0020</string>
    <string name="commentComment">Comment:\u0020</string>

    <string name ="queryhintsearchview">Search!</string>

    <string-array name="category_array">
        <item>Food</item>
        <item>Accessories</item>
        <item>Electronics</item>
    </string-array>

    <string-array name="category_filter_array">
        <item>All</item>
        <item>Food</item>
        <item>Accessories</item>
        <item>Electronics</item>
    </string-array>

    <!-- Notifications and warnings -->
    <string name="first_time">Find tabs by swiping the left of the screen</string>
    <string name="noConnectionText">You have no internet connection.\nClick Settings to open the settings menu\nClick Cancel to use the local database</string>
    <string name="noConnectionMapsText">No internet connection found. Maps might not be able to load properly. \nWould you like to go to settings?</string>
    <string name="locationtext">Location could not be found. Do you want to go to location settings?</string>
    <string name="noImageText">This product will be added without an image. Continue?</string>
    <string name="logouttext">Are you sure you want to log out?</string>
    <string name="wrongLogin">Wrong username or password</string>
    <string name="cantretrieveproducts">Can\'t retrieve products ,because your mobile device is too slow! \nTry again later!</string>
    <!-- Instead of "..." we use "&#8230;" -->
    <string name="obtaining_location">Obtaining location&#8230;</string>
    <string name="saving_location">Saving location&#8230;</string>
    <string name="deleteproduct">Delete product</string>
    <string name="suretodeleteproduct">Are you sure you want to delete this product?</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="EnterUsername">Enter username here</string>
    <string name="EnterPassword">Enter password here</string>
    <string name="EnterEmail">Enter e-mail here</string>
    <string name="adding_product">Adding product&#8230;</string>
    <string name="EnterUserPass">Enter username and password here</string>

    <string name="location_enabled">Location settings have been enabled</string>
    <string name="comment_added">Comment added</string>
    <string name="fill_in_all_fields">Please fill in all fields</string>
    <string name="file_too_large">File size too large: maximum 10 MB.\nPlease select another image or reduce file size</string>
    <string name="could_not_create_account">Could not create account</string>
    <string name="new_user_created_with_username">New user created with username\u0020</string>
    <string name="username_exists">Username already exists.\nPlease choose another username</string>
    <string name="email_exists">This email address is already in use</string>
    <string name="went_wrong_creating_account">Unfortunately, something went wrong when creating the account.\nPlease try again later</string>
    <string name="product_edited">Product has been edited</string>
    <string name="product_deleted_with_title">Product deleted:\u0020</string>
    <string name="error_deleting_product">Error deleting product</string>
    <string name="logged_in">Logged in</string>
    <string name="logged_in_as">Logged in as:\u0020</string>
    <string name="set_current_selling_position">Set your current selling location:\u0020</string>
    <string name="no_user_logged_in">No user is logged in</string>
    <string name="location_of_user_set_part1">Location of\u0020</string>
    <string name="location_of_user_set_part2">\u0020has been set</string>
    <string name="ProductSetTitle">You chose...</string>
    <string name="ProductSeller">Sold by </string>


</resources>
