<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="group6.kb_50.marketaid.Seller.EditProductActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SellerButton"
        android:id="@+id/SellerEditText"
        android:layout_centerHorizontal="true"
        android:textSize="50sp"
        android:gravity="center"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EditProduct"
        android:id="@+id/EditProductText"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_below="@+id/SellerEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:id="@+id/TitleEditText"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_below="@+id/EditProductText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:gravity="bottom" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/EnterProductTitleEdit"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TitleEditText"
        android:gravity="bottom"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SampleImageEditView"
        android:src="@mipmap/ic_launcher"
        android:layout_above="@+id/EditImageButton"
        android:layout_below="@+id/EnterProductTitleEdit"
        android:layout_alignLeft="@+id/SellerEditText"
        android:layout_alignStart="@+id/SellerEditText"
        android:layout_alignRight="@+id/SellerEditText"
        android:layout_alignEnd="@+id/SellerEditText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EditImage"
        android:id="@+id/EditImageButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickAddImage"
        android:gravity="center"
        android:layout_above="@+id/CategoryEditText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Browse"
        android:id="@+id/BrowseEditButton"
        android:layout_alignTop="@+id/EditImageButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:layout_above="@+id/CategoryEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Category"
        android:id="@+id/CategoryEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:gravity="bottom"
        android:textSize="20sp"
        android:layout_above="@+id/EnterProductCategoryEdit" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/EnterProductCategoryEdit"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:gravity="bottom"
        android:layout_above="@+id/DescriptionEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Description"
        android:id="@+id/DescriptionEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:gravity="bottom"
        android:textSize="20sp"
        android:layout_above="@+id/EditProductDescriptionEdit" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/EditProductDescriptionEdit"
        android:layout_alignParentStart="true"
        android:gravity="bottom"
        android:lines="2"
        android:layout_above="@+id/EditButton"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EditProduct"
        android:id="@+id/EditButton"
        android:onClick="onClickAddProduct"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RemoveProduct"
        android:id="@+id/RemoveEditButton"
        android:layout_alignTop="@+id/EditButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
