<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    tools:context="group6.kb_50.marketaid.BuyerProductActivity"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BuyerButton"
        android:id="@+id/BuyerProductText"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_margin="5dp"
        android:textSize="50sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ProductTitle"
        android:id="@+id/TitleProductText"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_margin="5dp"
        android:textSize="20sp" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarBuyerProduct"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:indeterminate="false" />

    <ImageView
        android:layout_width="145dp"
        android:layout_height="198dp"
        android:id="@+id/ImageProductView"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ProductDescription"
        android:id="@+id/DescriptionProductText"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:gravity="center"
        android:layout_margin="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ShowLocation"
        android:id="@+id/LocationProductButton"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_margin="5dp"
        android:onClick="onClickFindLocation"/>
</LinearLayout>
