<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    tools:context="group6.kb_50.marketaid.BuyerFilterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BuyerButton"
        android:id="@+id/BuyerFilterText"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_margin="5dp"
        android:textSize="50sp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SelectFilter"
        android:id="@+id/FilterText"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_margin="5dp"
        android:textSize="20sp"
        android:layout_weight="1" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="222dp"
        android:id="@+id/listView2"
        android:layout_gravity="center_horizontal"
        android:layout_weight="3.02" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SetFilter"
        android:id="@+id/SetFilterButton"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:gravity="center" />
</LinearLayout>
